Fixed scrolling issue with hero contatiners. Now issue with background image cutoff

--- a/app/static/css/contact.css
+++ b/app/static/css/contact.css
@@ -2,6 +2,120 @@
   CSS file for contact.html - the Contact page for C150data
 */
 
+
+#contact {
+  width: 100%;
+  height: 100vh;
+  background: url(../img/hero-bg.jpg) top center;
+  background-size: cover;
+  position: relative;
+}
+
+@media (min-width: 1024px) {
+  #contact {
+    background-attachment: fixed;
+  }
+}
+
+#contact .alert {
+    width: 400px;
+    margin-top: -75px;
+    z-index: 1;
+}
+
+#contact:before {
+  content: "";
+  background: rgba(0, 0, 0, 0.6);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#contact .contact-container {
+  position: relative;
+  bottom: 0;
+  top: 130px;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+@media (max-width: 768px) {
+    #contact .contact-container {
+      position: relative;
+      bottom: 0;
+      top: 130px;
+      left: 0;
+      right: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      text-align: center;
+    }
+}
+
+#contact h1 {
+  margin: 30px 0 10px 0;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56px;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+@media (max-width: 768px) {
+  #contact h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+}
+
+#contact h2 {
+  color: #eee;
+  margin-bottom: 50px;
+  font-size: 24px;
+}
+
+@media (max-width: 768px) {
+  #contact h2 {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 30px;
+  }
+}
+
+#contact .btn-get-started {
+  font-family: 'Open Sans', sans-serif;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 28px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px;
+  border: 2px solid #fff;
+  color: #fff;
+}
+
+#contact .btn-get-started:hover {
+  background: #b9d9eb;
+  border: 2px solid #b9d9eb;
+}
+
+#contact .container-fluid {
+    position: fixed;
+    top: 200px;
+}
+
+
 .contact-form {
     top: center;
     position: relative;
@@ -9,16 +123,6 @@
 }
 .contact-form .form-control {
     border-radius: 1rem;
-}
-
-.contact-image {
-    text-align: center;
-}
-
-.contact-image img {
-    border-radius: 6rem;
-    width: 11%;
-    margin-top: -3%;
 }
 
 .contact-form form {
